# Rivet

./: .gitignore  CMakeLists.txt  README.md  test.rvt
include/rivet/: ast.hpp  token.hpp
src/: eval.cpp  eval.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
